--- a/index.html
+++ b/index.html
@@ -1,45 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tamasha Learning</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        darkMode: 'class',
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Inter', 'sans-serif'],
-              mono: ['JetBrains Mono', 'monospace'],
-            },
-            colors: {
-              surface: '#0b1220',
-              accent: {
-                DEFAULT: '#4f46e5',
-                dark: '#4338ca',
-              }
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tamasha Learning</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;700;900&family=JetBrains+Mono:wght@400;500;700&family=Manrope:wght@400;500;600;700;800&family=Inter:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['Inter', 'sans-serif'],
+            mono: ['JetBrains Mono', 'monospace'],
+          },
+          colors: {
+            surface: '#0b1220',
+            accent: {
+              DEFAULT: '#4f46e5',
+              dark: '#4338ca',
             }
           }
         }
       }
-    </script>
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-      }
-      .scrollbar-hide::-webkit-scrollbar {
-          display: none;
-      }
-      .scrollbar-hide {
-          -ms-overflow-style: none;
-          scrollbar-width: none;
-      }
-    </style>
+    }
+  </script>
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+
+    .scrollbar-hide::-webkit-scrollbar {
+      display: none;
+    }
+
+    .scrollbar-hide {
+      -ms-overflow-style: none;
+      scrollbar-width: none;
+    }
+  </style>
   <script type="importmap">
 {
   "imports": {
@@ -52,10 +57,36 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-gray-50 text-gray-900 dark:bg-[#0f1724] dark:text-gray-100 transition-colors duration-300">
-    <div id="root"></div>
+
+<body style="background:#020208;color:#e8e8f0">
+  <div id="t-cursor-dot"></div>
+  <div id="t-cursor-ring"></div>
+  <div id="root"></div>
   <script type="module" src="/index.tsx"></script>
+  <script>
+      (function () {
+        var dot = document.getElementById('t-cursor-dot');
+        var ring = document.getElementById('t-cursor-ring');
+        var rx = 0, ry = 0;
+        document.addEventListener('mousemove', function (e) {
+          dot.style.left = e.clientX + 'px';
+          dot.style.top = e.clientY + 'px';
+        });
+        (function lerp() {
+          rx += (parseFloat(dot.style.left || '0') - rx) * 0.12;
+          ry += (parseFloat(dot.style.top || '0') - ry) * 0.12;
+          ring.style.left = rx + 'px';
+          ring.style.top = ry + 'px';
+          requestAnimationFrame(lerp);
+        })();
+        document.querySelectorAll('a,button,[role="button"]').forEach(function (el) {
+          el.addEventListener('mouseenter', function () { document.body.classList.add('cursor-hover'); });
+          el.addEventListener('mouseleave', function () { document.body.classList.remove('cursor-hover'); });
+        });
+      })();
+  </script>
 </body>
+
 </html>
